[tool.poetry]
name = "tus"
version = "0.1.0"
description = ""
authors = ["volker <volker.jaenisch@inqbus.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tuspyserver = "^4.0.3"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
requests = "^2.32.4"
tuspy = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
